feat: 优化部分代码 & 去除冗余逻辑